Display tags Update index view function to get tags from the database Update index.html to display a specific number of tags Update index.html and navbar.html to have there own stylesheets Change the background color and border color of the navbar Change color of the site name

--- a/unsplash/clone/templates/all-posts/base.html
+++ b/unsplash/clone/templates/all-posts/base.html
@@ -24,13 +24,13 @@
     <!-- Navbar -->
     {% include 'navbar.html' %}
 
-    <h1>Does css work?</h1>
-
     <!-- Content from child templates -->
 
     {% block content %}
     {% endblock %}
-
+    
+    <!-- Javascript -->
+    
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         {% bootstrap_javascript %}
