--- a/unsplash/clone/templates/navbar.html
+++ b/unsplash/clone/templates/navbar.html
@@ -1,8 +1,19 @@
+{% load bootstrap3 %}
+{% load staticfiles%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"content="width=device-width, initial-scale=1">
+
+    <!-- Styles block -->
+    {% block styles %}
+
+        {% bootstrap_css %}
+        <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
+
+    {% endblock %}
 </head>
 <body>
 
@@ -12,13 +23,20 @@
 
             <div class="navbar-header">
 
-                <a href="{% url 'index'%}" class="navbar-brand">hsalpsnU</a>
+                <a href="{% url 'index'%}" class="navbar-brand siteName">hsalpsnU</a>
 
             </div>
 
         </div>
 
     </nav>
+
+    <!-- Javascript -->
+
+    {% block scripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        {% bootstrap_javascript %}
+    {% endblock %}
     
 </body>
 </html>
