Create tag view function Create tag view function for displaying images for a specific tag Create tag.html to be rendered by the tag view function Update urls.py to contain a route for a specific tag Update navbar to display an icon to represent the site Update tag names in the index page to be links leading to the tag's view function

--- a/unsplash/clone/static/css/navbar.css
+++ b/unsplash/clone/static/css/navbar.css
@@ -3,11 +3,14 @@
     background-color: white;
     border-color: white;
 }
+.siteIcon{
+    font-size: 2.75em;
+}
 
-a.navbar-brand.siteName {
+a.navbar-brand.siteIcon {
     color: black;
 }
 
-a.navbar-brand.siteName:hover{
-    color: blue;
+a.navbar-brand.siteIcon:hover{
+    color: black;
 }
