--- a/unsplash/clone/templates/navbar.html
+++ b/unsplash/clone/templates/navbar.html
@@ -23,7 +23,9 @@
 
             <div class="navbar-header">
 
-                <a href="{% url 'index'%}" class="navbar-brand siteName">hsalpsnU</a>
+                <a href="{% url 'index'%}" class="navbar-brand siteIcon">
+                    <i class="glyphicon glyphicon-camera"></i>
+                </a>
 
             </div>
 
