--- a/unsplash/clone/templates/all-posts/index.html
+++ b/unsplash/clone/templates/all-posts/index.html
@@ -5,7 +5,7 @@
 {% block styles %}
 
     {{block.super}}
-    <link rel="stylesheet" href="{% static 'css/base.css'%}">
+    <link rel="stylesheet" href="{% static 'css/index.css'%}">
 
 {% endblock %}
 
@@ -50,8 +50,19 @@
 
         <hr>
 
-        <div class="row">
-            <h4>LIst of photos</h4>
+        
+        <div class="row imageRow">
+
+            {% for image_post in image_posts|slice:":20" %}
+
+                <div class="col-md-4 col-lg-4 imageColumn">
+
+                    <img src="{{image_post.image.url}}" alt="{{image_post.name}}" class="img-responsive">
+
+                </div>
+
+            {% endfor %}
+
         </div>
 
     </div>
