--- a/unsplash/clone/templates/all-posts/tag.html
+++ b/unsplash/clone/templates/all-posts/tag.html
@@ -25,6 +25,20 @@
 
         <hr>
 
+        <div class="row imageRow">
+
+            {% for image_post in image_posts %}
+
+                <div class="col-md-4 col-lg-4 imageColumn">
+
+                    <img src="{{image_post.image.url}}" alt="{{image_post.name}}" class="img-responsive">
+
+                </div>
+
+            {% endfor %}
+
+        </div>
+
     </div>
 
 {% endblock %}
