Change image size Change height of images to be smaller

--- a/unsplash/clone/static/css/tag.css
+++ b/unsplash/clone/static/css/tag.css
@@ -1,4 +1,5 @@
 /*Style the tag template*/
-.imageColumn{
-    margin-top: 0.75em;
+img.img-responsive{
+    margin-top: 0.25em;
+    height: 45vh;
 }
