Display full image Create image-post view function to display a full image Update urls to include image-post view function Create image-post.html to display a full image and its tags Update images in tag.html and index.html to have links to a image-post view function

--- a/unsplash/clone/templates/all-posts/tag.html
+++ b/unsplash/clone/templates/all-posts/tag.html
@@ -30,8 +30,12 @@
             {% for image_post in image_posts %}
 
                 <div class="col-md-4 col-lg-4 imageColumn">
+                    
+                    <a href="{% url 'imagePost' image_post.id%}">
 
-                    <img src="{{image_post.image.url}}" alt="{{image_post.name}}" class="img-responsive">
+                        <img src="{{image_post.image.url}}" alt="{{image_post.name}}" class="img-responsive">
+
+                    </a>
 
                 </div>
 
