--- a/unsplash/clone/templates/all-posts/tag.html
+++ b/unsplash/clone/templates/all-posts/tag.html
@@ -17,9 +17,13 @@
 
         <div class="row singleTagRow">
 
-            <h1>
-                {{tag.name}}
-            </h1>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+                <h1>
+                    {{tag.name}}
+                </h1>
+                
+            </div>
 
         </div>
 
