--- a/unsplash/clone/templates/navbar.html
+++ b/unsplash/clone/templates/navbar.html
@@ -29,6 +29,32 @@
 
             </div>
 
+            <!-- Adding search form -->
+
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4  searchForm">
+
+                <form action="{% url 'search_results' %}" class="navbar-form" role="search">
+
+                    <div class="input-group">
+
+                        <input type="text" class="form-control" placeholder="Search Photo by Tag" name="tag">
+
+                        <div class="input-group-btn">
+
+                            <button class="btn btn-default" type="submit">
+
+                                <i class="glyphicon glyphicon-search"></i>
+
+                            </button>
+
+                        </div>
+
+                    </div>
+
+                </form>
+
+            </div>
+
         </div>
 
     </nav>
