--- a/unsplash/clone/templates/navbar.html
+++ b/unsplash/clone/templates/navbar.html
@@ -12,6 +12,7 @@
 
         {% bootstrap_css %}
         <link rel="stylesheet" href="{% static 'css/navbar.css'%}">
+        <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
 
     {% endblock %}
 </head>
