--- a/unsplash/clone/static/css/navbar.css
+++ b/unsplash/clone/static/css/navbar.css
@@ -1,7 +1,7 @@
 /*Style the navbar template*/
 .navbar{
-    background-color: #fff;;
-    border-color: #fff;;
+    background-color: #fff;
+    border-color: #fff;
     font-family: 'Varela', sans-serif;
 
 }
@@ -59,8 +59,6 @@ ul.nav.navbar-nav > li > a:hover {
     ul.nav.navbar-nav > li > a {
         font-size: 1.15em;
     }
-    
-
 
 }
 
