--- a/unsplash/clone/templates/all-posts/index.html
+++ b/unsplash/clone/templates/all-posts/index.html
@@ -6,6 +6,7 @@
 
     {{block.super}}
     <link rel="stylesheet" href="{% static 'css/index.css'%}">
+    <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
 
 {% endblock %}
 
@@ -19,9 +20,9 @@
 
             <ul class="tagsList list-unstyled">
 
-                {% for tag in tags|slice:":6"  %}
+                {% for tag in tags|slice:":9"  %}
 
-                    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 well">
 
                         <li>
                             <a href="{%url 'tag' tag.id%}">{{tag.name}}</a>
@@ -34,17 +35,15 @@
 
         </div>
 
-        <hr>
-
-        <div class="row">
+        <div class="row headerRow">
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-                <h1>
+                <h1 class="siteName">
                     hsalpsnU
                 </h1>
 
-                <article>
+                <article class="siteIntro">
                     This is a clone of <a href="https://unsplash.com/">Unsplah</a>, a photo sharing website
                 </article>
                 
