--- a/unsplash/clone/templates/all-posts/tag.html
+++ b/unsplash/clone/templates/all-posts/tag.html
@@ -6,6 +6,7 @@
 
     {{block.super}}
     <link rel="stylesheet" href="{% static 'css/tag.css'%}">
+    <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
 
 {% endblock %}
 
@@ -19,7 +20,7 @@
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-                <h1>
+                <h1 class="tagName">
                     {{tag.name}}
                 </h1>
                 
