Style the search page Link search page to tag.css so that search template and tag template are similar

--- a/unsplash/clone/static/css/tag.css
+++ b/unsplash/clone/static/css/tag.css
@@ -1,5 +1,5 @@
 /*Style the tag template*/
-h1.tagName{
+h1.tagName, h1.searchMessage{
     font-family: 'Varela', sans-serif;
     font-size: 2.75em;
     margin-left: 0.70em;
