--- a/unsplash/clone/templates/all-posts/search.html
+++ b/unsplash/clone/templates/all-posts/search.html
@@ -6,6 +6,7 @@
 
     {{block.super}}
     <link rel="stylesheet" href="{% static 'css/tag.css'%}">
+    <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
 
 {% endblock %}
 
@@ -21,7 +22,7 @@
 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-                    <h1>
+                    <h1 class="searchMessage">
                         Found {{image_posts|length}} of {{message}}
                     </h1>
                     
@@ -48,7 +49,7 @@
 
                 {% for image_post in image_posts %}
 
-                    <div class="col-md-4 col-lg-4 imageColumn">
+                    <div class="col-sm-6 col-md-4 col-lg-4 imageColumn">
                         
                         <a href="{% url 'imagePost' image_post.id%}">
 
