Style coleections template Change the font family of the tags Place tags in wells that are similar to the wells in the index page Change color of the tags Set different layout of tags on tablets and small computer screens Set tags to not be visible for mobile phones Change comment in tag.css

--- a/unsplash/clone/static/css/tag.css
+++ b/unsplash/clone/static/css/tag.css
@@ -1,4 +1,4 @@
-/*Style the tag template*/
+/*Style the tag and search templates*/
 h1.tagName, h1.searchMessage{
     font-family: 'Varela', sans-serif;
     font-size: 2.75em;
