--- a/unsplash/clone/templates/all-posts/collections.html
+++ b/unsplash/clone/templates/all-posts/collections.html
@@ -6,6 +6,7 @@
 
     {{block.super}}
     <link rel="stylesheet" href="{% static 'css/collections.css'%}">
+    <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
 
 {% endblock %}
 
@@ -13,7 +14,7 @@
 {% block content %}
 
     {{block.super}}
-    <div class="container-fluid">
+    <div class="container">
 
         <div class="row tagRow">
 
