--- a/clone/templates/all-posts/index.html
+++ b/clone/templates/all-posts/index.html
@@ -54,21 +54,24 @@
 
         <hr>
 
-        {% for image_post in image_posts|slice:":20" %}
+        <div class="photo">
 
-            <div class="col-sm-6 col-md-4 col-lg-4 imageColumn">
+            {% for image_post in image_posts%}
+
+                <div class="imageColumn">
                 
-                <a href="{% url 'imagePost' image_post.id%}">
+                    <a href="{% url 'imagePost' image_post.id%}">
 
-                    <img src="{{image_post.image.url}}" alt="{{image_post.name}}" class="img-responsive">
+                        <img src="{{image_post.image.url}}" alt="{{image_post.name}}" class="img-responsive">
 
-                </a>
+                    </a>
 
 
-            </div>
+                </div>
 
-        {% endfor %}
+            {% endfor %}
 
+        </div>
 
     </div>
 {% endblock %}
