--- a/static/css/image-post.css
+++ b/static/css/image-post.css
@@ -1,25 +1,71 @@
 /*Style image-post template*/
-img.img-responsive{
+.image-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    height: 100%;
+}
+
+.close-overlay {
+    float: right;
+}
+
+.close-overlay > a{
+    color: #000;
+}
+
+.image-panel{
+    margin-top: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.panel-default>.panel-heading {
+    background: white;
+    border-bottom: none;
+    padding-top: 1%;
+}
+
+img.img-responsive.avatar {
+    border-radius: 100%;
+    height: 6vh;
+    display: inline;
+    background-color: grey;
+}
+
+h4.user-info{ 
+    display: inline;
+}
+
+button.btn.btn-success.btn-xs {
+    float: right;
+    margin-top: -0.5%;
+}
+
+img.img-responsive.imagePost{
     margin-bottom: 0.25em;
     margin-left: auto;
     margin-right: auto;
     display: block;
 }
 
-div.col-xs-2.col-sm-2.col-md-2.col-lg-2.well{
+.panel-default>.panel-footer {
+    background: white;
+    border-bottom: none;
+    padding-top: 1%;
+    padding-bottom: 3%;
+}
+
+div.col-xs-2.col-sm-2.col-md-2.col-lg-2{
     border-radius: 2.5em;
     max-width: 10vw;
     margin-left: 0.5em;
     margin-right: 0.5em;
-    background-color: #FAFAFF;
-    border-color: #2B303A;
 }
 
-div.col-xs-2.col-sm-2.col-md-2.col-lg-2.well > small.imagePostTags > a{
+div.col-xs-2.col-sm-2.col-md-2.col-lg-2 > small.imagePostTags > a{
     color: #040403;
 }
 
-div.col-xs-2.col-sm-2.col-md-2.col-lg-2.well > small.imagePostTags > a:hover{
+div.col-xs-2.col-sm-2.col-md-2.col-lg-2 > small.imagePostTags > a:hover{
     color: #92AFD7;
     text-decoration: none;
 }
@@ -30,7 +76,74 @@ div.col-xs-2.col-sm-2.col-md-2.col-lg-2.well > small.imagePostTags > a:hover{
 }
 
 @media only screen and (max-width: 1024px) {
-    .tagsRow{
+    .tagsRow {
+        display: none;
+    }
+
+    .btn.btn-success.btn-xs{
         display: none;
     }
 }
+
+/* modal */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+}
+
+.modal-content, #caption { 
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+    border-radius: 3%;
+}
+
+.modal-header{
+    background-color: rgb(255, 255, 255);
+}
+
+button.close {
+    top: 15px;
+    right: 35px;
+    color: #fff;
+    font-size: 1em;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+button.close {
+    color: black;
+}
+
+button.close:hover,
+button.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
+}
+
+.modal-backdrop {
+    z-index: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+
+
+
