Update information displayed by copy image button

--- a/clone/templates/all-posts/image-post.html
+++ b/clone/templates/all-posts/image-post.html
@@ -33,7 +33,7 @@
 
                 <button class="btn btn-success btn-xs" data-toggle="modal" data-target="#myModal">
                     <h5>
-                        Copy Image Url
+                        Copy Image Link
                     </h5>
                 </button>
                 
