--- a/static/css/tag.css
+++ b/static/css/tag.css
@@ -6,10 +6,24 @@ h1.tagName, h1.searchMessage{
     margin-right: 3em;
 }
 
-img.img-responsive{
-    margin-top: 0.25em;
-    height: 45vh;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.photo {
+    position: relative;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    -webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
+}   
+
+.photo img { 
+    width: 100%; 
+    margin: 12px 0px;
+}
+
+@media only screen and (max-width: 500px) { 
+    .photo {
+        -webkit-column-count: 1; /* Chrome, Safari, Opera */
+        -moz-column-count: 1; /* Firefox */
+        column-count: 1;
+    }       
 }
